--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Frattali</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+<meta http-equiv="refresh" content="5" />
 </head>
 <body>
 src="mandelbrot.png"
